--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "build:prod": "vite build --mode production",
+    "preview": "vite preview",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "analyze": "vite build --mode production && source-map-explorer 'dist/assets/*.js'",
+    "clean": "rimraf dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -78,6 +81,9 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "rimraf": "^5.0.5",
+    "source-map-explorer": "^2.5.3",
+    "terser": "^5.28.1"
   }
 }
