--- a/public/.htaccess
+++ b/public/.htaccess
@@ -7,7 +7,9 @@ RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
 RewriteRule ^ - [L]
 
 # If the requested resource doesn't exist, use index.html
-RewriteRule ^ index.html [L]
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteRule . /real-estate/index.html [L]
 
 # Enable CORS
 Header set Access-Control-Allow-Origin "*"
@@ -37,4 +39,13 @@ Header set Access-Control-Allow-Origin "*"
     ExpiresByType text/javascript "access plus 1 month"
     ExpiresByType application/x-javascript "access plus 1 month"
     ExpiresByType text/html "access plus 1 day"
+</IfModule>
+
+<IfModule mod_rewrite.c>
+  RewriteEngine On
+  RewriteBase /real-estate/
+  RewriteRule ^index\.html$ - [L]
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteRule . /real-estate/index.html [L]
 </IfModule> 
