--- a/public/api/.htaccess
+++ b/public/api/.htaccess
@@ -1,11 +1,20 @@
-Header set Access-Control-Allow-Origin "https://real-estate.lipiner.co.il"
-Header set Access-Control-Allow-Methods "POST, OPTIONS"
-Header set Access-Control-Allow-Headers "Content-Type"
+# Enable CORS
+<IfModule mod_headers.c>
+    SetEnvIf Origin "^https?://(real-estate\.lipiner\.co\.il|lipiner\.co\.il)$" ORIGIN=$0
+    Header set Access-Control-Allow-Origin "%{ORIGIN}e" env=ORIGIN
+    Header set Access-Control-Allow-Methods "POST, OPTIONS"
+    Header set Access-Control-Allow-Headers "Content-Type"
+    Header set Access-Control-Max-Age "3600"
+    
+    # Handle OPTIONS method
+    RewriteEngine On
+    RewriteCond %{REQUEST_METHOD} OPTIONS
+    RewriteRule ^(.*)$ $1 [R=200,L]
+</IfModule>
 
-# Handle OPTIONS method for CORS preflight
-RewriteEngine On
-RewriteCond %{REQUEST_METHOD} OPTIONS
-RewriteRule ^(.*)$ $1 [R=200,L]
+# Ensure PHP errors are logged
+php_flag log_errors on
+php_value error_log /path/to/your/error.log
 
 # Test rule to verify .htaccess is working
 <Files "test.html">
