--- a/public_html/real-estate/.htaccess
+++ b/public_html/real-estate/.htaccess
@@ -1,24 +1,29 @@
 # Enable rewriting
 RewriteEngine On
 
+# Allow direct access to API directory
+RewriteRule ^api/ - [L]
+
+# Allow direct access to assets and uploads
+RewriteRule ^assets/ - [L]
+RewriteRule ^lovable-uploads/ - [L]
+
 # If an existing asset or directory is requested, serve it
 RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -f [OR]
 RewriteCond %{DOCUMENT_ROOT}%{REQUEST_URI} -d
 RewriteRule ^ - [L]
 
-# Handle static assets in subdirectories
-RewriteCond %{REQUEST_URI} !^/real-estate/api/
-RewriteCond %{REQUEST_URI} !^/real-estate/assets/
-RewriteCond %{REQUEST_URI} !^/real-estate/lovable-uploads/
-
-# Serve index.html for all other routes
+# Serve index.html for all other routes (React routes)
 RewriteRule ^ /real-estate/index.html [L]
 
-# Properly serve js and css files with correct content type
+# Set proper content types
 <FilesMatch "\.js$">
     ForceType application/javascript
 </FilesMatch>
 
 <FilesMatch "\.css$">
     ForceType text/css
-</FilesMatch> 
+</FilesMatch>
+
+# Disable directory listing
+Options -Indexes 
