--- a/package.json
+++ b/package.json
@@ -78,12 +78,15 @@
     "globals": "^15.9.0",
     "lovable-tagger": "^1.1.7",
     "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.11",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1",
     "rimraf": "^5.0.5",
     "source-map-explorer": "^2.5.3",
-    "terser": "^5.28.1"
+    "tailwindcss": "^3.4.11",
+    "terser": "^5.28.1",
+    "typescript": "^5.5.3",
+    "typescript-eslint": "^8.0.1",
+    "vite": "^5.4.12"
+  },
+  "overrides": {
+    "esbuild": ">=0.25.0"
   }
 }
